Rename app and update favicon; add TimeInput component for hour and minute input

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "timerjob",
+    "name": "stressjob",
     "slug": "timerjob",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -22,7 +22,7 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/stressfav.png"
     }
   }
 }
